[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Font/Theleah_72.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/PlayerDisplay.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Start.gd" type="Script" id=4]
[ext_resource path="res://Assets/Font/Theleah_64.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scenes/PixelatedScreen.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(":feet")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.4, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(":wing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(":bird_vel")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 1.5, 2.1, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 250, 0 ), Vector2( 250, -400 ), Vector2( -500, 50 ), Vector2( -40, 200 ), Vector2( 300, 50 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("PixelatedScreen/Viewport/DisplayPanel/PlayerDisplay")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 2.7, 2.8, 2.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "wing_flap"
}, {
"args": [  ],
"method": "wing_flap"
}, {
"args": [  ],
"method": "wing_flap"
}, {
"args": [  ],
"method": "wing_flap"
}, {
"args": [  ],
"method": "wing_flap"
}, {
"args": [  ],
"method": "wing_flap"
}, {
"args": [  ],
"method": "wing_flap"
}, {
"args": [  ],
"method": "wing_flap"
}, {
"args": [  ],
"method": "wing_flap"
}, {
"args": [  ],
"method": "wing_flap"
}, {
"args": [  ],
"method": "wing_flap"
}, {
"args": [  ],
"method": "wing_flap"
}, {
"args": [  ],
"method": "wing_flap"
}, {
"args": [  ],
"method": "wing_flap"
}, {
"args": [  ],
"method": "wing_flap"
}, {
"args": [  ],
"method": "wing_flap"
}, {
"args": [  ],
"method": "wing_flap"
} ]
}

[node name="Start" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
bird_vel = Vector2( 250, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 1 )

[node name="PixelatedScreen" parent="." instance=ExtResource( 6 )]

[node name="Viewport" type="Viewport" parent="PixelatedScreen"]
size = Vector2( 1920, 1080 )
handle_input_locally = false
render_target_update_mode = 3
audio_listener_enable_2d = true

[node name="ColorRect" type="ColorRect" parent="PixelatedScreen/Viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.513726, 0.462745, 0.611765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PixelatedScreen/Viewport"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -193.5
margin_top = 141.111
margin_right = 193.5
margin_bottom = 185.111
grow_horizontal = 2
custom_fonts/font = ExtResource( 5 )
text = "this is how the bird will look"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayPanel" type="Node2D" parent="PixelatedScreen/Viewport"]
position = Vector2( 980.219, 372.937 )
scale = Vector2( 3, 3 )

[node name="PlayerDisplay" parent="PixelatedScreen/Viewport/DisplayPanel" instance=ExtResource( 3 )]
z_index = 0
flap_down_dur = 0.252
flap_up_dur = 0.166
open_tuck_dur = 0.283
feet_dur = 0.155

[node name="VBoxContainer" type="VBoxContainer" parent="PixelatedScreen/Viewport"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.9
margin_left = -793.5
margin_right = 793.5
grow_horizontal = 2
theme = ExtResource( 1 )
custom_constants/separation = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pixel" type="Button" parent="PixelatedScreen/Viewport/VBoxContainer"]
margin_top = 552.0
margin_right = 1693.0
margin_bottom = 692.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "up to toggle pixel filter"

[node name="Music" type="Button" parent="PixelatedScreen/Viewport/VBoxContainer"]
margin_top = 692.0
margin_right = 1693.0
margin_bottom = 832.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "left/right to toggle music"

[node name="Play" type="Button" parent="PixelatedScreen/Viewport/VBoxContainer"]
margin_top = 832.0
margin_right = 1693.0
margin_bottom = 972.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "space to start the game"
